--- a/FullModuleTemplate/.vscode/settings.json
+++ b/FullModuleTemplate/.vscode/settings.json
@@ -2,6 +2,7 @@
 {
   "powershell.codeFormatting.openBraceOnSameLine": false,
   "powershell.codeFormatting.newLineAfterOpenBrace": true,
+  "powershell.codeFormatting.preset": "Allman",
   "editor.formatOnSave": true,
   "editor.insertSpaces": true,
   "editor.tabSize": 4,
