--- a/FullModuleTemplate/.vscode/settings.json
+++ b/FullModuleTemplate/.vscode/settings.json
@@ -8,5 +8,6 @@
   "editor.tabSize": 4,
   "[json]": {
     "editor.tabSize": 2
-  }
+  },
+  "powershell.scriptAnalysis.settingsPath": ".vscode/PSScriptAnalyzerSettings.psd1"
 }
