--- a/FullModuleTemplate/appveyor.yml
+++ b/FullModuleTemplate/appveyor.yml
@@ -1,5 +1,11 @@
 # See http://www.appveyor.com/docs/appveyor-yml for many more options
 
+# Build worker image (VM template)
+image: Visual Studio 2015
+
+# clone directory
+clone_folder: C:\MyProjects\<%= $PLASTER_PARAM_ModuleName %>
+
 environment:
   NugetApiKey:
     secure: ***************
