--- a/FullModuleTemplate/appveyor.yml
+++ b/FullModuleTemplate/appveyor.yml
@@ -18,6 +18,10 @@ os: WMF 5
 skip_commits:
   message: /updated (readme|doc).*|update (readme|doc).*s/
 
+# build cache to preserve files/folders between builds
+cache:
+  - _build-cache -> *.depend.psd1
+
 build: false
 
 #Kick off the CI/CD pipeline
